--- a/app/package.json
+++ b/app/package.json
@@ -11,12 +11,13 @@
     "@testing-library/user-event": "^14.1.0",
     "@types/jest": "^25.0.0",
     "@types/node": "^12.0.0",
-    "@types/react": "^16.9.0",
-    "@types/react-dom": "^16.9.0",
+    "@types/react": "^18.0.9",
+    "@types/react-dom": "^18.0.4",
     "framer-motion": "^6.2.9",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-icons": "^3.0.0",
+    "react-query": "^3.39.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.6.3",
     "web-vitals": "^0.2.2"
