--- a/app/package.json
+++ b/app/package.json
@@ -48,6 +48,7 @@
   "devDependencies": {
     "@babel/preset-typescript": "^7.17.12",
     "jest": "^28.1.0",
-    "jest-environment-jsdom": "^28.1.0"
+    "jest-environment-jsdom": "^28.1.0",
+    "nock": "^13.2.4"
   }
 }
