--- a/app/package.json
+++ b/app/package.json
@@ -28,6 +28,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "jest .",
+    "lint": "eslint **/*.{ts,tsx}",
+    "lint:fix": "eslint **/*.{ts,tsx} --fix",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -47,6 +49,15 @@
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.17.12",
+    "@typescript-eslint/eslint-plugin": "^5.25.0",
+    "@typescript-eslint/parser": "^5.25.0",
+    "eslint": "^7.32.0 || ^8.2.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jest": "^26.2.2",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "jest": "^28.1.0",
     "jest-environment-jsdom": "^28.1.0",
     "nock": "^13.2.4"
