--- a/app/package.json
+++ b/app/package.json
@@ -21,6 +21,7 @@
     "react-query": "^3.39.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-youtube": "^9.0.1",
     "typescript": "^4.6.3",
     "web-vitals": "^0.2.2"
   },
@@ -29,6 +30,7 @@
     "build": "react-scripts build",
     "test": "jest .",
     "lint": "eslint **/*.{ts,tsx}",
+    "ts-check": "tsc",
     "lint:fix": "eslint **/*.{ts,tsx} --fix",
     "eject": "react-scripts eject"
   },
