--- a/app/package.json
+++ b/app/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/icons": "^2.0.0",
     "@chakra-ui/react": "^2.0.2",
     "@emotion/react": "^11.0.0",
     "@emotion/styled": "^11.0.0",
@@ -17,6 +18,7 @@
     "framer-motion": "^6.2.9",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-hook-form": "^7.31.1",
     "react-icons": "^3.0.0",
     "react-query": "^3.39.0",
     "react-router-dom": "^6.3.0",
